--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Main Taski Workflow
 on:
   push:
     branches:
-      - Main
+      - main
 jobs:
   checkout-and-print-tree:
     runs-on: ubuntu-latest
