--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,24 @@
-name: Main Taski Workflow
+name: Main Taski workflow
+
 on:
   push:
     branches:
       - main
+
 jobs:
-  checkout-and-print-tree:
+  tests:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Check out repository code
-        uses: actions/checkout@v4
-      - name: Print project tree
-        run: tree .
+    - name: Check out code
+      uses: actions/checkout@v4
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: "3.10"
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install ruff==0.8.0
+    - name: Lint with ruff
+      run: python -m ruff check backend/
